--- a/KinectForDDR/Kinect4ddr/MainWindow.xaml
+++ b/KinectForDDR/Kinect4ddr/MainWindow.xaml
@@ -59,8 +59,8 @@
             <Button Grid.Row="0" Grid.Column="1" Name="BtnEnhanced" IsEnabled="False" Click="BtnEnhanced_Click">Enhanced</Button>
             <Button Grid.Row="0" Grid.Column="0" Name="BtnBasic" Click="BtnBasic_Click">Basic</Button>
 
-            <Button Grid.Row="1" Grid.Column="1" Name="BtnAnkle" Click="BtnAnkle_Click">Ankles</Button>
-            <Button Grid.Row="1" Grid.Column="0" Name="BtnFoot" IsEnabled="False" Click="BtnFoot_Click">Feet</Button>
+            <Button Grid.Row="1" Grid.Column="1" Name="BtnAnkle" IsEnabled="False" Click="BtnAnkle_Click">Ankles</Button>
+            <Button Grid.Row="1" Grid.Column="0" Name="BtnFoot" Click="BtnFoot_Click">Feet</Button>
             
             <TextBlock Grid.Row="2" Grid.Column="0" Margin="0 10 0 5">Threshholds:</TextBlock>
             <TextBlock Grid.Row="3" Grid.Column="0">Left/Right</TextBlock>
